--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
  
     background-color: blanchedalmond;
 }
@@ -20,7 +21,7 @@ align-items: center;
 }
 .sectionArriba header h1{
     margin: 0 0; 
-    padding: 10px 50px;
+    padding: 5px 0px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,7 +31,7 @@ align-items: center;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 98%;
     margin: 0;
     
 }
@@ -40,13 +41,20 @@ align-items: center;
     background-color: transparent;
     font-weight: 100;
     font-size: 12px;
+    cursor: pointer;           
+    transition: box-shadow 0.3s ease; 
+    
+}
+.sectionArriba .header-button  button:hover{
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
+   
 }
 
 .sectionArriba main{
     width: 80vw;
     height: 40vh;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     margin: 80px 0 80px 0;
   
@@ -56,21 +64,29 @@ main .meme{
     height: 100%;
 }
 main .meme .texto-arriba{
-    background-color: white;
-    height: 20%;
+    background-color: rgb(187, 192, 189);
+    height: auto;
+    min-height: 20%;
+    max-width: 300px;
+    padding: 15px;         
+    box-sizing: border-box;
 }
 main .meme .imagen-meme {
     background-color: black;
     height:80%;
 }
 main .meme .texto-abajo {
-    height: 20%;
-    background-color: white;
+    height: auto;
+    min-height: 20%;
+    max-width: 300px;
+    padding: 15px;         
+    box-sizing: border-box;
+    background-color: rgb(187, 192, 189);
 }
 
 .boton-descargarMeme{
     width: 100%;
-    height: 100px;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -87,28 +103,45 @@ main .meme .texto-abajo {
 
 }
 
-.editor-de-meme{
+#editorImagen{
+    position: absolute;
+    top: -380px;
+    right: 0;
     padding: 15px;
-    width: 60%;
-    height: 500px;
+    width: 320px;
+    box-sizing: border-box; 
+    height: fit-content;
     background-color: rgb(69, 64, 64);
     color: pink;
-    display: ;
-}
+    }
+
 #editorTexto{
+    position: absolute;
+    bottom: -380px;
+    right: 0;
     padding: 15px;
-    width: 60%;
-    height: 500px;
+    width: 320px;
+    box-sizing: border-box; 
+    height: fit-content;
     background-color: rgb(69, 64, 64);
-    color: pink;
-    display: ;   
+    color: pink; 
 }
+.editor-texto-contenido{
+    margin: 6px 0;
+    text-align: center;
+}
+/* #editorTexto.abierto{
+    width: 100%;
+
+} */
+
+
 @media (min-width: 768px){
   .sectionArriba{
     height: 80%;
   }
   .sectionArriba header{
-    height: 15vh;
+    height: 100px;
   }
     .sectionArriba header h1{
         font-size: 35px;
@@ -120,29 +153,79 @@ main .meme .texto-abajo {
     }
     .sectionArriba .header-button  button{
         font-size: 20px;
-        
-        
     }
 
     .sectionArriba main{
-        width: 50vw;
+        width: 400px;
         height: 55vh;
-        margin: 40px 0 70px 0;
-    
-        
-    .boton-descargarMeme button{
+        margin: 40px 0 70px 0px;
+       position: relative;
+       right: 60px;
+    }   
+    .sectionArriba main .texto-arriba{
+        max-width: 400px;
+    }
+    .sectionArriba main .texto-abajo{
+        max-width: 400px;
+    }
+ 
+    #botonDescargarMeme{
         background-color: rgb(99, 162, 107);
         width: 200px;
         height: 60px;
         font-size: 20px;
         text-align: center;
+        margin: 30px;
         padding: 10px;
         display: flex;
         justify-content: center;
         align-items: center;
-        
+        position: relative;
+        right: -70px;
+
         }
 
+    #editorTexto{
+        position: absolute;
+        top: -80px;
+        right: 0px;
+        padding: 15px;
+        width: 200px;
+        box-sizing: border-box; 
+        height: 600px;
+        background-color: rgb(69, 64, 64);
+        color: pink;
+        display: flex; 
+        flex-direction: column ;
+        justify-content: center;
+        align-self: center;
+        }
+
+        #editorImagen{
+            position: absolute;
+            top: 110px;
+            right: 0px;
+            padding: 15px;
+            width: 200px;
+            box-sizing: border-box; 
+            height: 600px;
+            background-color: rgb(69, 64, 64);
+            color: pink;
+            display: flex; 
+            flex-direction: column ;
+            justify-content: center;
+            align-self: center;
+            }
+            .contenido-imagen{
+                margin: 5px 0;
+                text-align: center;
+            }
+        
+    /* #editorTexto.abierto{
+        width: 100%;
+        
+        } */
+         
 }
 @media (min-width: 1024px){
 
