--- a/index.css
+++ b/index.css
@@ -59,6 +59,15 @@ align-items: center;
     margin: 80px 0 80px 0;
   
 }
+/* #modoOscuro{
+    background-color: black;
+    color: white;
+ }
+ #modoClaro{
+    background-color: white;
+    color: black;
+ } */
+
 main .meme{
     width: 100%;
     height: 100%;
@@ -235,3 +244,4 @@ main .meme .texto-abajo {
 
 
 }
+1234
