--- a/index.css
+++ b/index.css
@@ -12,14 +12,14 @@ flex-direction: column;
 justify-content: center;
 align-items: center;
 }
-.sectionArriba header{
+header{
     height: fit-content;
     width: 100%;
     background-color: lightcoral;
     color: black;
     padding-bottom: 10px;
 }
-.sectionArriba header h1{
+header h1{
     margin: 0 0; 
     padding: 5px 0px;
     display: flex;
@@ -27,7 +27,7 @@ align-items: center;
     align-items: center;
     font-size: 20px;
 }
-.sectionArriba .header-button {
+.header-button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,7 +35,7 @@ align-items: center;
     margin: 0;
     
 }
-.sectionArriba .header-button  button{
+ .header-button  button{
     margin: 0 auto;
     border: none;
     background-color: transparent;
@@ -45,12 +45,12 @@ align-items: center;
     transition: box-shadow 0.3s ease; 
     
 }
-.sectionArriba .header-button  button:hover{
+ .header-button  button:hover{
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
    
 }
 
-.sectionArriba main{
+ main{
     width: 80vw;
     height: 40vh;
     display: flex;
@@ -149,32 +149,32 @@ main .meme .texto-abajo {
   .sectionArriba{
     height: 80%;
   }
-  .sectionArriba header{
+  header{
     height: 100px;
   }
-    .sectionArriba header h1{
+   header h1{
         font-size: 35px;
     }
-    .sectionArriba .header-button {
+   header .header-button {
          margin: 10px;
          justify-content: center;
          align-items: center;
     }
-    .sectionArriba .header-button  button{
+    header .header-button  button{
         font-size: 20px;
     }
 
-    .sectionArriba main{
+     main{
         width: 400px;
         height: 55vh;
         margin: 40px 0 70px 0px;
        position: relative;
        right: 60px;
     }   
-    .sectionArriba main .texto-arriba{
+    main .texto-arriba{
         max-width: 400px;
     }
-    .sectionArriba main .texto-abajo{
+    main .texto-abajo{
         max-width: 400px;
     }
  
