--- a/index.css
+++ b/index.css
@@ -54,7 +54,7 @@ header h1{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 80px 0 80px 0;
+    margin: 50px 0 50px 0;
   
 }
 
@@ -67,9 +67,10 @@ main .meme .texto-arriba{
     background-color: rgb(187, 192, 189);
     height: auto;
     min-height: 20%;
-    max-width: 300px;
+    max-width: 100%;
     padding: 15px;         
     box-sizing: border-box;
+    margin: 0;
 }
 main .meme .imagen-meme {
     background-color: black;
@@ -78,20 +79,15 @@ main .meme .imagen-meme {
 main .meme .texto-abajo {
     height: auto;
     min-height: 20%;
-    max-width: 300px;
+    max-width: 100%;
     padding: 15px;         
     box-sizing: border-box;
     background-color: rgb(187, 192, 189);
+    margin: 0;
 }
 
-.boton-descargarMeme{
-    width: 100%;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.boton-descargarMeme button{
+
+main button{
     background-color: rgb(99, 162, 107);
     width: 150px;
     height: 40px;
@@ -100,12 +96,15 @@ main .meme .texto-abajo {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    left: 50px;
+    top: 30px;
 
 }
 
 #editorImagen{
     position: absolute;
-    top: -380px;
+    top:500px;
     right: 0;
     padding: 15px;
     width: 320px;
@@ -117,7 +116,7 @@ main .meme .texto-abajo {
 
 #editorTexto{
     position: absolute;
-    bottom: -380px;
+    top:500px;
     right: 0;
     padding: 15px;
     width: 320px;
@@ -164,18 +163,18 @@ main .meme .texto-abajo {
         font-size: 20px;
     }
 
-     main{
-        width: 400px;
-        height: 55vh;
-        margin: 40px 0 70px 0px;
-       position: relative;
-       right: 60px;
+    main{
+    width: 400px;
+    height: 55vh;
+    margin: 40px 0 70px 0px;
+    position: relative;
+    right: 60px;
     }   
     main .texto-arriba{
-        max-width: 400px;
+        max-width: 600px;
     }
     main .texto-abajo{
-        max-width: 400px;
+        max-width: 600px;
     }
  
     #botonDescargarMeme{
@@ -190,13 +189,14 @@ main .meme .texto-abajo {
         justify-content: center;
         align-items: center;
         position: relative;
-        right: -70px;
+        left: 80px;
+        top: 0px;
 
         }
 
     #editorTexto{
         position: absolute;
-        top: -80px;
+        top: 110px;
         right: 0px;
         padding: 15px;
         width: 200px;
