--- a/index.css
+++ b/index.css
@@ -53,6 +53,7 @@ header h1{
     width: 80vw;
     height: 40vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 50px 0 50px 0;
@@ -72,7 +73,8 @@ main .meme .texto-arriba{
 }
 main .meme .imagen-meme {
     height:80%;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(2, 1, 1);
+    object-fit: cover;
   
 }
 
@@ -97,8 +99,8 @@ main button{
     justify-content: center;
     align-items: center;
     position: relative;
-    left: 50px;
-    top: 30px;
+    left:0;
+    top: 100px;
 
 }
 main button #botonDescargarMeme{
@@ -186,11 +188,14 @@ main button #botonDescargarMeme{
 
     main{
     width: 400px;
-    height: 55vh;
+    height: 70vh;
     margin: 40px 0 70px 0px;
     position: relative;
     right: 60px;
     }   
+    main .imagen-meme{
+        max-height: 300px;
+    }
     main .texto-arriba{
         max-width: 600px;
     }
@@ -210,8 +215,7 @@ main button #botonDescargarMeme{
         justify-content: center;
         align-items: center;
         position: relative;
-        left: 80px;
-        top: 0px;
+        top: 50px;
         }
 
     #editorTexto{
