--- a/index.css
+++ b/index.css
@@ -45,46 +45,53 @@ header .header-button {
     
 }
  .header-button  button:hover{
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
-   
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);   
 }
 
- main{
+main{
     width: 80vw;
-    height: 40vh;
+    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 50px 0 50px 0;
+    margin: 10px 0 10px 0;
 }
 main .meme{
-    width: 100%;
-    height: 100%;
+    width:280px;
+    height: 280px ;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 60px;
 }
 main .meme .texto-arriba{
-    background-color: rgb(187, 192, 189);
     height: auto;
-    min-height: 20%;
-    max-width: 100%;
-    padding: 15px;         
+    width: 100%;     
     box-sizing: border-box;
     margin: 0;
+
+    
 }
 main .meme .imagen-meme {
-    height:80%;
+    width: 100%;
+    max-height:70%;
     background-color: rgb(2, 1, 1);
-    object-fit: cover;
-  
+
+}
+main .meme .imagen-meme #imagenMeme{
+    max-height: 100%;
+    object-fit: cover; 
+    padding-bottom: 200px;
+    
+
 }
 
 main .meme .texto-abajo {
-    height: auto;
-    min-height: 20%;
-    max-width: 100%;
-    padding: 15px;         
+    width: 100%;
+    height: auto;         
     box-sizing: border-box;
-    background-color: rgb(187, 192, 189);
     margin: 0;
 }
 
@@ -173,6 +180,13 @@ main button #botonDescargarMeme{
     background-color: rgba(213, 128, 104, 0.529);
     color: black;
  } 
+ .ocultar{
+    display: none;
+ }
+ .transparente {
+    background-color: transparent;
+ }
+
 
 @media (min-width: 768px){
     .sectionArriba{
@@ -192,22 +206,26 @@ main button #botonDescargarMeme{
     header .header-button  button{
         font-size: 20px;
     }
-
     main{
+        width: 100%;
+        height: 80%;
+    }
+
+    main .meme{
        width: 400px;
-       height: 70vh;
-       margin: 40px 0 70px 0px;
+       height: 400px;
        position: relative;
        right: 60px;
+    
     }   
     main .imagen-meme{
-        max-height: 300px;
+        
     }
     main .texto-arriba{
-        max-width: 600px;
+        
     }
     main .texto-abajo{
-        max-width: 600px;
+       
     }
  
     #botonDescargarMeme{
